# opengl-tests

./: .gitignore  CMakeLists.txt  README.md  color.frag  main.cpp  position.vert
cmake/: Findglfw3.cmake
extlibs/libs-osx/: libAntTweakBar.dylib
src/: main.cpp
